<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity"
    >



    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="108dp"
        android:text="@string/ingrese_el_nombre_de_la_persona"
        app:layout_constraintBottom_toTopOf="@+id/textInputEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/carta_de_festividades"
        android:textColor="@color/design_default_color_primary_variant"
        android:textSize="30sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/textInputEditText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.367"
        tools:ignore="MissingConstraints,DuplicateSpeakableTextCheck,VisualLintTextFieldSize"
        tools:layout_editor_absoluteX="0dp" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/textInputEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ingrese_el_nombre_de_la_persona"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.171"
        tools:ignore="MissingConstraints,VisualLintTextFieldSize"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:layout_marginBottom="24dp"
        android:text="@string/mensaje_de_felicitaci_n"
        app:layout_constraintBottom_toTopOf="@+id/textInputEditText2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputEditText"
        app:layout_constraintVertical_bias="0.0" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="146dp"
        android:layout_height="191dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputEditText2"
        app:layout_constraintVertical_bias="0.198">

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/cumplea_os_1"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/Cumpleaños2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/cumplea_os_2"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/Cumpleaños3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/cumplea_os_3"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/Cumpleaños4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:minHeight="48dp"
            android:text="@string/cumplea_os_4"
            tools:ignore="MissingConstraints,TouchTargetSizeCheck" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="127dp"
        android:layout_height="192dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/textInputEditText2"
        app:layout_constraintVertical_bias="0.193">

        <Button
            android:id="@+id/Finaño1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fin_de_a_o_1"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/Finaño2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fin_de_a_o_2"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/Finaño3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fin_de_a_o_3"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/Finaño4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fin_de_a_o_4"
            tools:ignore="MissingConstraints" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="112dp"
        android:layout_height="207dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.153"
        app:layout_constraintStart_toEndOf="@+id/linearLayout2"
        app:layout_constraintTop_toBottomOf="@+id/textInputEditText2"
        app:layout_constraintVertical_bias="0.203">

        <Button
            android:id="@+id/Navidad1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/navidad_1"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/Navidad2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/navidad_2" />

        <Button
            android:id="@+id/Navidad3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/navidad_3" />

        <Button
            android:id="@+id/navidad4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/navidad_4" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="150dp"
        android:layout_height="190dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="60dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4"
        app:layout_constraintVertical_bias="1.0">

        <Button
            android:id="@+id/pascua1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pascua_1"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/pascua2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pascua_2"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/pascua3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pascua_3"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/pascua4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pascua_4"
            tools:ignore="MissingConstraints" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="139dp"
        android:layout_height="209dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/linearLayout3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <Button
            android:id="@+id/vacaciones1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vacaciones_1"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/vacaciones2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vacaciones_2"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/vacaciones3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vacaciones_3"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/vacaciones4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vacaciones_4"
            tools:ignore="MissingConstraints" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Ingrese nombre completo"
        app:layout_constraintBottom_toTopOf="@+id/textInputEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />


</androidx.constraintlayout.widget.ConstraintLayout>